--- a/Theoretical Machine Learning Notes.tex
+++ b/Theoretical Machine Learning Notes.tex
@@ -18,7 +18,7 @@ We want to find the value of parameter(s) which best represent the data(*), the 
 
 Let f be the pdf of random variable X, \(X_i\) is the value if sample i ,  then \(f(X_i \mid \theta)\) is read as the chance of \(X_i\) happening if value of parmeter is \(\theta)\) \newline  \newline 
 Likelihood function : \(L(\theta) = \prod_{i=1}^{m} f(X_i \mid \theta)\) ( assumption here : sampling are independent process). We want to find \(\theta\) that maximize  L , i.e. (*) \newline
-Generally, we take log likelihood (monotonically increasing function) and then find maxima (by partial derivatives = 0) 
+Generally, we take log (monotonically increasing function) likelihood to convert multiplications to additions for easier handling  and then find maxima (by partial derivatives = 0) 
 
 \section{Confusion Matrix}
 Predict True, Actual True : True Positive (TP) \newline
